[gd_scene load_steps=17 format=3 uid="uid://pqca05bjsioj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_k12wf"]
[ext_resource type="Script" path="res://scripts/character_components/move.gd" id="2_i2kvp"]
[ext_resource type="Theme" uid="uid://dexdmgrhrsh0h" path="res://ui/base_theme.tres" id="3_dwfqp"]
[ext_resource type="Script" path="res://scripts/utils/skin_selector.gd" id="3_fo20f"]
[ext_resource type="SpriteFrames" uid="uid://bd2rjyuo1q3p1" path="res://frames/miku_frames.tres" id="4_8mwhn"]
[ext_resource type="Shape2D" uid="uid://d1enhgygmn6ng" path="res://collision_shapes/character.tres" id="4_q6s4o"]
[ext_resource type="PackedScene" uid="uid://wtb0bpq1j403" path="res://scenes/utils/camera_2d.tscn" id="5_uwxc7"]
[ext_resource type="Script" path="res://scripts/utils/camera_2d.gd" id="6_ywwtg"]
[ext_resource type="Script" path="res://scripts/character_components/collect.gd" id="8_vwmd1"]
[ext_resource type="Script" path="res://scripts/character_components/weapon_slot.gd" id="9_xv6n2"]
[ext_resource type="Script" path="res://scripts/character_components/weapon_adder.gd" id="10_mo5pi"]
[ext_resource type="Script" path="res://scripts/character_components/detect_spikes.gd" id="11_y2khf"]
[ext_resource type="Texture2D" uid="uid://oenbp7enbwix" path="res://assets/exp.png" id="13_22dfr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fdet2"]
radius = 335.001

[sub_resource type="CircleShape2D" id="CircleShape2D_xmfvp"]
radius = 1017.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i534i"]
texture = ExtResource("13_22dfr")
texture_margin_right = 113.0
region_rect = Rect2(0, 0, 465, 32)

[node name="Character" type="Node2D"]
script = ExtResource("1_k12wf")
hp = 500.0
max_hp = 500.0
speed = 1000.0
attack = 1000.0
invincibility_time = 0.0

[node name="DefaultTarget" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1060)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_mask = 33
motion_mode = 1
script = ExtResource("2_i2kvp")

[node name="Node" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("3_fo20f")
id = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D/Node"]
scale = Vector2(10, 10)
sprite_frames = ExtResource("4_8mwhn")
animation = &"die"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CharacterBody2D/Node"]
visible = false
position = Vector2(1, -2)
scale = Vector2(10, 10)
sprite_frames = ExtResource("4_8mwhn")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-4, 47)
shape = ExtResource("4_q6s4o")

[node name="Health" type="Control" parent="CharacterBody2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -149.0
offset_top = -151.0
offset_right = 151.0
offset_bottom = -111.0

[node name="HealthBar" type="ProgressBar" parent="CharacterBody2D/Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.993)
theme = ExtResource("3_dwfqp")
theme_override_font_sizes/font_size = 36
metadata/_edit_use_anchors_ = true

[node name="Camera2D" parent="CharacterBody2D" instance=ExtResource("5_uwxc7")]
zoom = Vector2(1, 1)
script = ExtResource("6_ywwtg")

[node name="AudioListener2D" type="AudioListener2D" parent="CharacterBody2D"]

[node name="CollectArea2D" type="Area2D" parent="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("8_vwmd1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/CollectArea2D"]
shape = SubResource("CircleShape2D_fdet2")

[node name="WeaponSlots" type="Node2D" parent="CharacterBody2D"]
unique_name_in_owner = true
script = ExtResource("9_xv6n2")

[node name="Slot1" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(-165, -150)

[node name="Slot2" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(165, -150)

[node name="Slot3" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(215, 100)

[node name="Slot4" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(-215, 100)

[node name="Slot5" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(0, 200)

[node name="TargetArea2D" type="Area2D" parent="CharacterBody2D"]
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/TargetArea2D"]
shape = SubResource("CircleShape2D_xmfvp")

[node name="Node2D" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("10_mo5pi")

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterBody2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpikeDetector" type="Area2D" parent="CharacterBody2D"]
position = Vector2(-3, 47)
collision_layer = 0
collision_mask = 64
script = ExtResource("11_y2khf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/SpikeDetector"]
shape = ExtResource("4_q6s4o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Exp" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -53.0
offset_right = -1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Exp"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 1.08
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dwfqp")
theme_override_font_sizes/font_size = 36
theme_override_styles/fill = SubResource("StyleBoxTexture_i534i")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="CharacterBody2D/CollectArea2D" to="CharacterBody2D/CollectArea2D" method="_on_area_entered"]
[connection signal="body_entered" from="CharacterBody2D/TargetArea2D" to="." method="_on_target_area_2d_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/TargetArea2D" to="." method="_on_target_area_2d_body_exited"]
[connection signal="body_shape_entered" from="CharacterBody2D/SpikeDetector" to="CharacterBody2D/SpikeDetector" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="CharacterBody2D/SpikeDetector" to="CharacterBody2D/SpikeDetector" method="_on_body_shape_exited"]
